# registries-search

./: .gitignore  COMPLIANCE.yaml  README.md  codecov.yaml
bor-api/: wsgi.py  (+15 more)
doc-service/: Dockerfile  Makefile  requirements.txt  setup.cfg  setup.py  test_run.py
doc-service/requirements/: non-pypi.txt  package.txt
doc-service/src/doc_service/: __init__.py  __main__.py  config.py  service.py  version.py
doc-service/src/doc_service/common/: __init__.py  enum.py
doc-service/src/doc_service/services/: __init__.py  documents.py  iam.py  logging.py
doc-service/src/doc_service/services/storage/: __init__.py  abstract_storage.py  google_storage.py
doc-service/tests/unit/: test_get_message.py
search-api/: .coverage  .dockerignore  .env.sample  .gcloudignore  Dockerfile  Makefile  README.md  coverage.xml  gunicorn_config.py  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_db.sh  wsgi.py
search-api/.devcontainer/: devcontainer.json
search-api/devops/: business-search-service-account.json  cloudbuild-pr-preview.yaml  cloudbuild.dev.yaml  vaults.gcp.env  vaults.json
search-api/devops/gcp/: clouddeploy.yaml
search-api/migrations/: alembic.ini  env.py
search-api/migrations/versions/: 065057716b7a_.py  20240723_131259_eaf25b9a20bf_.py  20241105_164024_0ba810e98e41_.py  34c72e8a1cb2_.py  3faf50891480_index_by_idp_guid.py  4f8d9cf024c6_.py  6072ec70fb7a_login_source.py  be013c507d76_.py  c10f3d4b2262_.py  c10f3d4b2262_solr_tracking.py  f7d39c77458f_add_idp_userid_to_users.py
search-api/requirements/: bcregistry-libraries.txt  dev.txt  external-libraries.txt  prod.txt  prod_serverless.txt
search-api/src/search_api/: __init__.py  config.py  errorhandlers.py  errors.py  schemas.py  version.py
search-api/src/search_api/enums/: __init__.py  document_type.py  solr_doc_event_status.py  solr_doc_event_type.py  solr_doc_status.py
search-api/src/search_api/exceptions/: __init__.py
search-api/src/search_api/models/: __init__.py  db.py  document.py  document_access_request.py  errors.py  solr_doc.py  solr_doc_event.py  solr_doc_update.py  user.py  utils.py
search-api/src/search_api/request_handlers/: __init__.py  document_access_request_handler.py  search.py  update_solr_handler.py
search-api/src/search_api/resources/: __init__.py  constants.py  meta.py  ops.py  registry_search.py  utils.py  version_endpoint.py
search-api/src/search_api/resources/internal/: __init__.py
search-api/src/search_api/resources/v1/: __init__.py  meta.py  ops.py  purchase_requests.py  search.py
search-api/src/search_api/resources/v1/businesses/: __init__.py  document_request.py  documents.py  search.py  update_solr.py
search-api/src/search_api/resources/v2/: __init__.py
search-api/src/search_api/services/: __init__.py  authz.py  entity.py  flags.py  payment.py  queue.py  solr.py  validator.py
search-api/src/search_api/services/base_solr/: __init__.py
search-api/src/search_api/services/business_solr/: __init__.py
search-api/src/search_api/services/document_services/: __init__.py  document_access_request.py
search-api/src/search_api/services/document_storage/: __init__.py  abstract_storage_service.py  storage_service.py
search-api/src/search_api/services/gcp_auth/: __init__.py  abstract_auth_service.py  auth_service.py
search-api/src/search_api/services/solr/: __init__.py  solr.py  solr_docs.py  solr_fields.py
search-api/src/search_api/translations/: __init__.py
search-api/src/search_api/utils/: auth.py  base.py  datetime.py  logging.py  run_version.py  util.py
search-api/src/search_api/utils/validators/: __init__.py
search-api/tests/: __init__.py  conftest.py  pytest_marks.py
search-api/tests/postman/: search-api-local.postman_environment.json  search-api.postman_collection.json  search.postman_collection.json
search-api/tests/unit/: __init__.py
search-api/tests/unit/api/: test_meta.py  test_ops.py  test_purchase_requests.py
search-api/tests/unit/api/businesses/: test_document_request.py  test_search.py  test_update_solr.py
search-api/tests/unit/api/internal/: __init__.py  test_update_solr.py
search-api/tests/unit/api/search/: __init__.py  test_facets.py  test_parties.py
search-api/tests/unit/api/v1/: test_purchase_requests.py
search-api/tests/unit/api/v2/: __init__.py
search-api/tests/unit/mocks/: create-invoice-cc-response.json  create-invoice-pad-response.json
search-api/tests/unit/models/: __init__.py  test_document.py  test_document_access_request.py  test_solr_doc.py  test_solr_doc_event.py  test_user.py
search-api/tests/unit/request_handlers/: __init__.py  test_document_access_request_handler.py
search-api/tests/unit/services/: test_authorization.py  test_validator.py  utils.py
search-api/tests/unit/services/document_services/: test_document_services.py  test_simple_cloudevent.py
search-api/tests/unit/services/test_flags/: __init__.py  test_flags.py  test_flags_integration.py  test_int_flags.py
search-api/tests/unit/services/test_solr/: __init__.py  test_solr_basic.py  test_solr_query.py
search-api/tests/unit/utils/: __init__.py
search-solr-importer/: .dockerignore  .env.sample  .gcloudignore  Dockerfile  MANIFEST.in  Makefile  README.md  data_import_handler.py  logging.conf  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
search-solr-importer/devops/: vaults.json  vaults.ocp.env
search-solr-importer/requirements/: bcregistry-libraries.txt  dev.txt  external-libraries.txt  prod.txt
search-solr-importer/src/search_solr_importer/: __init__.py  config.py  logging.py  oracle.py  version.py
search-solr-importer/src/search_solr_importer/enums/: __init__.py  colin_party_type_code.py
search-solr-importer/src/search_solr_importer/services/: __init__.py  base_db.py  btr_db.py  lear_db.py  oracle.py
search-solr-importer/src/search_solr_importer/translations/: __init__.py
search-solr-importer/src/search_solr_importer/utils/: __init__.py  data_collection.py  data_parsing.py  reindex.py  update_solr.py
search-solr-importer/tests/unit/: __init__.py  conftest.py  test_data_import_handler.py
(+1114 files in other folders)
