[metadata]
name = doc-service
version = attr: doc_service.__version__
url = https://github.com/bcgov/registries-search/doc-service
project_urls =
    Documentation =
    Changes = 
    Source Code = https://github.com/bcgov/registries-search/doc-service
    Issue Tracker =
    Chat = 
license = Apache
author = thor wolpert
author_email = thor@daxiom.com
maintainer = thor wolpert
maintainer_email = thor@daxiom.com
description = super simple cloudevent that supports json
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
asyncio_mode=auto
filterwarnings =
    error

[coverage:run]
branch = True
source =
    document_generation
    tests

[coverage:paths]
source =
    src
    */site-packages

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = src/search_api
ignored-modules=flask_sqlalchemy
    sqlalchemy
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    k,
    q,
    u,
    v,
    ar,
    ce,
    rv,
    logger,

[pylint]
ignore=tests
max-line-length=120
notes=FIXME,XXX,TODO
ignored-modules=flask_sqlalchemy,sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session
disable=C0301,W0511,W0703,R0801,R0902,R0401,R0903

[flake8]
ignore =
    # bare except, handled by bugbear B001
    I005,E722,F401
# isort_show_traceback = True
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/doc_service/__init__.py: F401

[isort]
line_length = 120
indent = 4
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = True
