[metadata]
name = search_solr_importer
url = https://github.com/bcgov/registry-search/search-solr-importer.git
author = team-le
author_email = kialj876@gmail.com
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Registry Search
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.11
license = Apache Software License Version 2.0
description = DIH for the BC Registries Search Solr
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.11
include_package_data = True
packages = find:

[options.package_data]
search_solr_importer =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length=10
application_import_names=search_solr_importer
per-file-ignores =
    *.py:I001
    */__init__.py:F401

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = src/search_solr_importer
ignored-modules=flask_sqlalchemy
    sqlalchemy
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    k,
    q,
    u,
    v,
    ar,
    rv,
    logger,

[pylint]
ignore=migrations,tests
max_line_length=120
notes=FIXME,XXX,TODO
ignored-modules=flask_sqlalchemy,sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session
disable=C0301,E1136,W0511,W0703,R0801,R0902,R0401
extension-pkg-whitelist=cx_Oracle

[isort]
line_length = 120
indent = 4
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = True

[tool:pytest]
minversion = 2.0
testpaths = tests
addopts = --verbose
    --strict
    -p no:warnings
    --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml
python_files = tests/*/test*.py
norecursedirs = .git .tox venv* requirements* build
log_cli = true
log_cli_level = 1
filterwarnings =
    ignore::UserWarning
markers =
    slow
    serial

[coverage:run]
branch = True
source =
    src/search_solr_importer

[report:run]
exclude_lines =
    pragma: no cover
    from
    import
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
